Shrink page breakpoints and allow page to breathe

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -47,10 +47,10 @@ of footer, it should exist after Page.
 
 <Playground>
   <Page
-    title="Get to work!"
+    title="Notification Settings"
     intro="This isn't just talk. Get into action with some buttons and menus."
-    primaryAction={{ label: "Send Food", onClick: () => alert("🥨") }}
-    secondaryAction={{ label: "Send Drink", onClick: () => alert("🍹") }}
+    primaryAction={{ label: "Send Food Alert", onClick: () => alert("🥨") }}
+    secondaryAction={{ label: "Send Drink Alert", onClick: () => alert("🍹") }}
     moreActionsMenu={[
       {
         actions: [
