docs(components): add responsive to Page

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -12,7 +12,7 @@ import { Text } from "../Text";
 
 # Page
 
-<ComponentStatus stage="pre" responsive="no" accessible="yes" />
+<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
 Use Page to build the outermost "main content" container of a view. Page comes
 complete with the ability to add the page title, along with actions and a
