feat(components): add keyboard to inputText

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -217,6 +217,18 @@ shouldn't replace server-side validation.
   }}
 </Playground>
 
+## Keyboard
+
+Determine what default keyboard appears on mobile web.
+
+<Playground>
+  <InputText
+    placeholder="Describe your age"
+    name="describeAge"
+    keyboard="numeric"
+  />
+</Playground>
+
 ## Using onValidation
 
 If you need to capture the error message and render it outside of the component.
