Add dismissible prop in banner

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -12,7 +12,9 @@ import { Banner } from ".";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Banners provide information about important changes, persistent conditions, and system errors. They're positioned at the top of the screen or near the content they reference, and are persistent until dismissed or the issue is resolved.
+Banners provide information about important changes, persistent conditions, and
+system errors. They're positioned at the top of the screen or near the content
+they reference, and are persistent until dismissed or the issue is resolved.
 
 ```ts
 import { Banner } from "@jobber/components/Banner";
@@ -67,6 +69,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
       label: "Poke Me",
       onClick: () => alert("💥💥SMASH💥💥")
     }}
+    dismissible={false}
   >
     You wouldn't like me when I'm angry.
   </Banner>
@@ -81,7 +84,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
   </Banner>
 </Playground>
 
-
 ## Related components
 
-* To provide low priority, temporary feedback on the outcome of a user action, use [Toast](toast) instead.
+- To provide low priority, temporary feedback on the outcome of a user action,
+  use [Toast](toast) instead.
