Match input signifier states, spice up checked radio

--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -28,7 +28,7 @@ export function Height({ of: size }) {
 
 | Name                  | Visual                       | Value                       |
 | :-------------------- | :--------------------------- | :-------------------------- |
-| `--space-minuscule`   | <Example of="minuscule" />   | <Height of="minuscule" />   |
+| `--space-miniscule`   | <Example of="miniscule" />   | <Height of="miniscule" />   |
 | `--space-smallest`    | <Example of="smallest" />    | <Height of="smallest" />    |
 | `--space-smaller`     | <Example of="smaller" />     | <Height of="smaller" />     |
 | `--space-small`       | <Example of="small" />       | <Height of="small" />       |
