Allow text to align center in banner

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -70,6 +70,7 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
       onClick: () => alert("💥💥SMASH💥💥")
     }}
     dismissible={false}
+    align="center"
   >
     You wouldn't like me when I'm angry.
   </Banner>
