Period for prerelease

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -50,7 +50,7 @@ De-emphasize a piece of text that is less important to the user
 
 ### Disabled
 
-Use when `Text` is part of a component that is disabled
+Use when `Text` is part of a component that is disabled.
 
 <Playground>
   <Checkbox label="View in side menu" disabled />
