--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -92,7 +92,7 @@ discrete options, such as “fixed price” and “per visit” invoicing option
 ## With a description
 
 If there is more information needed for a `Checkbox`, use the `description` prop
-instead of a longer `label`
+instead of a longer `label`.
 
 <Playground>
   <Checkbox
@@ -121,5 +121,6 @@ that the user has lost control of the interface.
 
 ## Related components
 
-* To let people turn a setting on or off instantly, use a [Switch](switch).
-* To present a set of options where people can only make a single choice, use a [Radio Group](radio-group).
+- To let people turn a setting on or off instantly, use a [Switch](switch).
+- To present a set of options where people can only make a single choice, use a
+  [Radio Group](radio-group).
