feat(components): adjust line-height on largest font sizes and add h6

--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -81,6 +81,20 @@ Used to group contents after a [heading 4](#heading-4).
   <Heading level={5}>Receives SMS</Heading>
 </Playground>
 
+### Heading 6
+
+Used to group contents after a [heading 5](#heading-5) or to group small lists
+of content.
+
+<Playground>
+  <Heading level={6}>Business Settings</Heading>
+  ...
+  <Heading level={6}>Organization Settings</Heading>
+  ...
+  <Heading level={6}>Communication Settings</Heading>
+  ...
+</Playground>
+
 ---
 
 ## Props
@@ -91,4 +105,5 @@ Used to group contents after a [heading 4](#heading-4).
 
 ## Related components
 
-* For introductory text after a page title or paragraph text for body copy, use [Text](text).
+- For introductory text after a page title or paragraph text for body copy, use
+  [Text](text).
