--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -6,7 +6,7 @@ route: /colors
 
 # Colors
 
-Colors for the Jobber Atlantis Design System
+Colors for the Jobber Atlantis Design System.
 
 import { ColorSwatches } from "@jobber/docx";
 import colors from "../colors";
