shh, addin some missing periods.

--- a/docs/guides/in-product-word-list.mdx
+++ b/docs/guides/in-product-word-list.mdx
@@ -57,7 +57,7 @@ leads.
 ### users / team / team members / field worker
 
 Use **users** when referring to the account's user limit, permissions, or
-individual team management
+individual team management.
 
 | **✅ Do**                                        | **❌ Don't**                                       |
 | ------------------------------------------------ | -------------------------------------------------- |
@@ -134,10 +134,10 @@ and the component directly when possible.
 ### add / create / new
 
 Use **create new** when a user is generating something from scratch within
-Jobber. Abbreviating to **New [object]** for page or view titles
+Jobber. Abbreviating to **New [object]** for page or view titles.
 
 Use **add** when a user is adding something to an object in Jobber, even if that
-object is being newly created
+object is being newly created.
 
 <img
   src="/public/assets/images/in-product-words/addvscreate.png"
