changes from review

--- a/docs/guides/in-product-word-list.mdx
+++ b/docs/guides/in-product-word-list.mdx
@@ -1,10 +1,10 @@
 ---
-name: Product vocabulary
+name: Product Vocabulary
 menu: Guides
 route: /guides/in-product-word-list
 ---
 
-# Product vocabulary
+# Product Vocabulary
 
 When and how to use words for our in-product experience.
 
@@ -12,7 +12,7 @@ When and how to use words for our in-product experience.
 
 ## People and Us
 
-### Account / profile
+### account / profile
 
 Use **account** in reference to the SP's business' Jobber account.
 
@@ -248,9 +248,9 @@ original when edited.
 Use **attach** when describing receipts, forms or signatures being added to an
 object. For file selection, use **select a file** for consistency.
 
-| **✅ Do**                                                  | **❌ Don't**                                               |
-| ---------------------------------------------------------- | ---------------------------------------------------------- |
-| Attach a receipt to this expense <br /> [Select a file](#) | Attach a receipt to this expense <br /> [Attach a file](#) |
+| **✅ Do**                                                         | **❌ Don't**                                                      |
+| ----------------------------------------------------------------- | ----------------------------------------------------------------- |
+| Attach a receipt to this expense <br /> [Select a file](#actions) | Attach a receipt to this expense <br /> [Attach a file](#actions) |
 
 <br />
 
@@ -309,6 +309,11 @@ instead.
 <br />
 
 ## Concepts and Items
+
+In general, none of these should be capitalized unless explicitely stated or
+when used in a page title.
+
+<br />
 
 ### address / property / service address / billing address
 
@@ -383,10 +388,10 @@ TBD
 
 Use Help Center exclusively when linking to additional help documentation.
 
-| **✅ Do **                                                              | **❌ Don't**                                                            |
-| ----------------------------------------------------------------------- | ----------------------------------------------------------------------- |
-| Learn how disputes work and how to prevent them in our [Help Center](#) | Learn how disputes work and how to prevent them in our [Help Center](#) |
-|                                                                         | Want to know how disputes work and how to prevent them? [Learn more](#) |
+| **✅ Do **                                                                                | **❌ Don't**                                                                                |
+| ----------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
+| Learn how disputes work and how to prevent them in our [Help Center](#concepts-and-items) | Learn how disputes work and how to prevent them in our [Documentation](#concepts-and-items) |
+|                                                                                           | Want to know how disputes work and how to prevent them? [Learn more](#concepts-and-items)   |
 
 <br />
 
