add note about v&t

--- a/docs/guides/in-product-word-list.mdx
+++ b/docs/guides/in-product-word-list.mdx
@@ -6,7 +6,9 @@ route: /guides/in-product-word-list
 
 # Product Vocabulary
 
-When and how to use words for our in-product experience.
+When and how to use words for our in-product experience. Refer to the
+[Voice and Tone Guidelines](https://jobber.atlassian.net/l/c/8vMbiEG1) for an
+overview of how we speak on behalf of the Jobber brand.
 
 ---
 
