Fix Text  mdx and remove white-space css property

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -60,7 +60,8 @@ De-emphasize a piece of text that is less important to the user
     Drag to rearrange the order that fields show up in Jobber
   </Text>
 </Playground>
-## number Of Lines
+
+## Number Of Lines
 
 Used to truncate large text with `...` based on line wrapping, such that the
 total number of lines does not exceed this number.
