add Jobber Labs

--- a/docs/guides/in-product-word-list.mdx
+++ b/docs/guides/in-product-word-list.mdx
@@ -422,6 +422,11 @@ Always refer to **Jobber Payments** in title case, as it's our branded feature.
 
 <br />
 
+### Jobber Labs / beta
+
+We always refer to our area for experimentation with new functionality as the
+branded feature, **Jobber Labs**.
+
 ### products and services / products & services
 
 Use **products and services** (and avoid flipping the words) in body text, and
