fix weird formatting in text

--- a/docs/guides/in-product-word-list.mdx
+++ b/docs/guides/in-product-word-list.mdx
@@ -226,8 +226,8 @@ Jobber in the same format.
 
 ### got it
 
-Use **got it** as a call to action \*\*\*\*when a user can acknowledge a message
-without taking action on it, like in promo cards or onboarding.
+Use **got it** as a call to action when a user can acknowledge a message without
+taking action on it, like in promo cards or onboarding.
 
 <br />
 
