review from sarah for help doc

--- a/docs/guides/in-product-word-list.mdx
+++ b/docs/guides/in-product-word-list.mdx
@@ -388,7 +388,8 @@ TBD
 
 ### help center / help docs / help documentation / learn more
 
-Use Help Center exclusively when linking to additional help documentation.
+Use Help Center exclusively when linking to additional help documentation, and
+link to the related document directly when possible.
 
 | **✅ Do **                                                                                | **❌ Don't**                                                                                |
 | ----------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
