reviews from josh and rename file

--- a/docs/guides/product-vocabulary.mdx
+++ b/docs/guides/product-vocabulary.mdx
@@ -1,7 +1,7 @@
 ---
 name: Product Vocabulary
 menu: Guides
-route: /guides/in-product-word-list
+route: /guides/product-vocabulary
 ---
 
 # Product Vocabulary
@@ -267,9 +267,9 @@ Use **save** at the end of a form on completion or **save changes** on editing.
 Use **update** when individual changes or groups of changes can be saved inline
 without needing to save a whole view or page.
 
-| **✅ Do**            | **❌ Don't**       |
-| -------------------- | ------------------ |
-| Update Company Hours | Save Company Hours |
+| **✅ Do**             | **❌ Don't**        |
+| --------------------- | ------------------- |
+| Update Business Hours | Save Business Hours |
 
 Use **submit** when an account user is completing and sending a form to Jobber,
 or when a service consumer is submitting a form to their service provider.
@@ -394,26 +394,14 @@ link to the related document directly when possible.
 | **✅ Do **                                                                                | **❌ Don't**                                                                                |
 | ----------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
 | Learn how disputes work and how to prevent them in our [Help Center](#concepts-and-items) | Learn how disputes work and how to prevent them in our [Documentation](#concepts-and-items) |
-|                                                                                           | Want to know how disputes work and how to prevent them? [Learn more](#concepts-and-items)   |
 
-<br />
+Avoid using **learn more** as a link's label as it is poor for accessibility.
+Stick to descriptive labels that give more context of where the link is taking a
+user.
 
-### line items / product / service
-
-Use **line items** to describe the groupings of products and services on a
-quote, job or invoice.
-
-| **✅ Do**              | **❌ Don't**                    |
-| ---------------------- | ------------------------------- |
-| Add line item to quote | Add product or service to quote |
-
-Use **product / service** as labels for the name and description of individual
-line items, or when referring to the list of them available outside of an
-individual quote, job or invoice.
-
-| **✅ Do**                                                                                       | **❌ Don't**                                                                         |
-| ----------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------ |
-| Would you like to add recommended products and services based on your industry to your account? | Would you like to add recommended line items based on your industry to your account? |
+| Do                                                                                        | Dont                                                                                     |
+| ----------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- |
+| Learn how disputes work and how to prevent them in our [Help Center](#concepts-and-items) | ant to know how disputes work and how to prevent them? [Learn more](#concepts-and-items) |
 
 <br />
 
@@ -428,14 +416,17 @@ Always refer to **Jobber Payments** in title case, as it's our branded feature.
 We always refer to our area for experimentation with new functionality as the
 branded feature, **Jobber Labs**.
 
-### products and services / products & services
+<br />
 
-Use **products and services** (and avoid flipping the words) in body text, and
-sentences in general.
+### products and services / products & services / line items
 
-| **✅ Do**                                                     | **❌ Don't**                                                 |
-| ------------------------------------------------------------- | ------------------------------------------------------------ |
-| The exported products and services are attached in a CSV file | Attached are your exported products & services in a CSV file |
+Use **products and services** (and avoid flipping the words) when referring to
+the master list of them in body text, and sentences in general.
+
+| **✅ Do**                                                                                       | **❌ Don't**                                                                         |
+| ----------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------ |
+| The exported products and services are attached in a CSV file                                   | Attached are your exported products & services in a CSV file                         |
+| Would you like to add recommended products and services based on your industry to your account? | Would you like to add recommended line items based on your industry to your account? |
 
 Use **products & services** for titles and navigation to keep things short and
 snappy.
@@ -443,6 +434,13 @@ snappy.
 | **✅ Do**                  | **❌ Don't**                 |
 | -------------------------- | ---------------------------- |
 | Add to Products & Services | Add to Products and Services |
+
+Use **line items** to describe the groupings of products and services on a
+quote, job or invoice.
+
+| **✅ Do**              | **❌ Don't**                    |
+| ---------------------- | ------------------------------- |
+| Add line item to quote | Add product or service to quote |
 
 <br />
 
