fix table heading styling

--- a/docs/guides/product-vocabulary.mdx
+++ b/docs/guides/product-vocabulary.mdx
@@ -145,7 +145,6 @@ object is being newly created.
   src="/public/assets/images/in-product-words/addvscreate.png"
   style={{ maxWidth: "100%" }}
 />
-
 <br />
 
 ### back / continue / next / previous
@@ -399,7 +398,7 @@ Avoid using **learn more** as a link's label as it is poor for accessibility.
 Stick to descriptive labels that give more context of where the link is taking a
 user.
 
-| Do                                                                                        | Dont                                                                                     |
+| **✅ Do **                                                                                | **❌ Don't**                                                                             |
 | ----------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- |
 | Learn how disputes work and how to prevent them in our [Help Center](#concepts-and-items) | ant to know how disputes work and how to prevent them? [Learn more](#concepts-and-items) |
 
