--- a/docs/guides/product-vocabulary.mdx
+++ b/docs/guides/product-vocabulary.mdx
@@ -139,11 +139,12 @@ Use **create new** when a user is generating something from scratch within
 Jobber. Abbreviating to **New [object]** for page or view titles.
 
 Use **add** when a user is adding something to an object in Jobber, even if that
-object is being newly created.
-
-<img
-  src="/public/assets/images/in-product-words/addvscreate.png"
-  style={{ maxWidth: "100%" }}
+object is being newly created.<img
+src="/public/assets/images/in-product-words/addvscreate.png"
+style={{
+maxWidth:
+"100%"
+}}
 />
 <br />
 
@@ -398,9 +399,9 @@ Avoid using **learn more** as a link's label as it is poor for accessibility.
 Stick to descriptive labels that give more context of where the link is taking a
 user.
 
-| **✅ Do **                                                                                | **❌ Don't**                                                                             |
-| ----------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- |
-| Learn how disputes work and how to prevent them in our [Help Center](#concepts-and-items) | ant to know how disputes work and how to prevent them? [Learn more](#concepts-and-items) |
+| **✅ Do **                                                                                | **❌ Don't**                                                                              |
+| ----------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------- |
+| Learn how disputes work and how to prevent them in our [Help Center](#concepts-and-items) | Want to know how disputes work and how to prevent them? [Learn more](#concepts-and-items) |
 
 <br />
 
