--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -22,7 +22,7 @@ import { Avatar } from "@jobber/components/Avatar";
 
 <Playground>
   <Avatar
-    imageUrl="https://api.adorable.io/avatars/150/jobbler"
+    imageUrl="https://images.unsplash.com/photo-1533858539156-90ea20bafd17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80"
     name="The Jobbler"
     size="large"
     initials="JBLR"
@@ -79,7 +79,7 @@ calendar.
         </div>
         <div style={style}>
           <Avatar
-            imageUrl="https://api.adorable.io/avatars/150/jobbler"
+            imageUrl="https://images.unsplash.com/photo-1533858539156-90ea20bafd17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80"
             color={color}
           />
         </div>
@@ -88,7 +88,7 @@ calendar.
         </div>
         <div style={style}>
           <Avatar
-            imageUrl="https://api.adorable.io/avatars/150/jobbler"
+            imageUrl="https://images.unsplash.com/photo-1533858539156-90ea20bafd17?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80"
             size="large"
             color={color}
           />
@@ -112,3 +112,6 @@ If an avatar is displayed without a name label, display a tooltip.
     );
   }}
 </Playground>
+
+##### Avatar image credit
+[Gabrielle Henderson on Unplash](https://unsplash.com/photos/noSpEJztSMc)
