copy updates, adding we/our

--- a/docs/guides/product-vocabulary.mdx
+++ b/docs/guides/product-vocabulary.mdx
@@ -83,21 +83,27 @@ appropriately.
 
 <br />
 
-### we
+### we / our
 
-Generally avoid referring to Jobber as **we** in the interface itself - focus on
-the user and what they can do rather than on Jobber.
+Generally avoid referring to Jobber as **we** - focus on the user and what they
+can do rather than on Jobber itself.
 
 | **✅ Do**                                                                            | **❌ Don't**                                                                                |
 | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------- |
 | The Mailchimp integration could not be set up\. Please correct the following errors: | We weren't able to set up your Mailchimp integration\. Please correct the following errors: |
 
-Only use **we** when we are actually performing an action for the user or making
-a suggestion.
+Use **we** when we are actually performing an action for the user or making a
+suggestion.
 
 | **✅ Do**                                                          | **❌ Don't**                                                                |
 | ------------------------------------------------------------------ | --------------------------------------------------------------------------- |
 | We'll email you as soon as we hear back from the cardholder's bank | You'll receive an email when a response is given from the cardholder's bank |
+
+Use **our** when referencing our teams, help center, or services we offer.
+
+| **✅ Do**                                                            | **❌ Don't**                                                                |
+| -------------------------------------------------------------------- | --------------------------------------------------------------------------- |
+| Jobber Payments is our seamless and secure online payment processor. | Jobber Payments is a seamless and secure online payment processor in Jobber |
 
 <br />
 
@@ -311,8 +317,8 @@ instead.
 
 ## Concepts and Items
 
-In general, none of these should be capitalized unless explicitely stated or
-when used in a page title.
+In general, none of these should be capitalized unless explicitly stated or when
+used in a page title.
 
 <br />
 
@@ -370,12 +376,12 @@ or as a verb.
 
 ### client hub
 
-Always refer to our service consumer portal as client hub. Stick to sentence
-case, as it is a general term, not branded.
+Always refer to our service consumer portal as the customer's client hub. Stick
+to sentence case, as it is a general term, not branded.
 
-| **✅ Do **                            | **❌ Don't**                          |
-| ------------------------------------- | ------------------------------------- |
-| Changes will be visible in client hub | Changes will be visible in Client Hub |
+| **✅ Do **                                 | **❌ Don't**                               |
+| ------------------------------------------ | ------------------------------------------ |
+| Changes will be visible in your client hub | Changes will be visible in your Client Hub |
 
 <br />
 
