--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -61,21 +61,53 @@ De-emphasize a piece of text that is less important to the user
   </Text>
 </Playground>
 
-## Number Of Lines
+## maxLines
 
 Used to truncate large text with `...` based on line wrapping, such that the
-total number of lines does not exceed this number.
+total number of lines does not exceed the preset. This is an optional prop. If
+left undefined all the contents are shown. It is same as using base as the value
 
 <Playground>
-  <Text numberOfLines="3">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec
-    pulvinar nunc. Suspendisse nec eros pretium, rutrum purus sit amet, finibus
-    ante. Donec pretium condimentum scelerisque. Duis eu ligula nec metus
-    suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt quis, pretium sed
-    metus. Maecenas quis dolor lacinia libero rhoncus fringilla. Cras mi ante,
-    euismod nec tortor in, tempus mollis nulla. Etiam eu lacus nibh. Donec
-    tristique lacus magna, vulputate tristique lacus blandit vitae. Aenean vitae
-    commodo metus. Fusce eu risus quis orci pharetra consequat nec nec libero.
+  <Text maxLines="single">
+    This will show 1 line. Lorem ipsum dolor sit amet, consectetur adipiscing
+    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+    purus sit amet, finibus ante. Donec pretium condimentum scelerisque.
+  </Text>
+  <br />
+  <br />
+  <Text maxLines="small">
+    This will show 2 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
+  </Text>
+  <br />
+  <br />
+  <Text maxLines="large">
+    This will show 8 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+    eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+    blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+    consequat nec nec libero.
+  </Text>
+  <br />
+  <br />
+  <Text maxLines="larger">
+    This will show 16 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+    eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+    blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+    consequat nec nec libero.
   </Text>
 </Playground>
 
