--- a/packages/components/src/LightBox/LightBox.mdx
+++ b/packages/components/src/LightBox/LightBox.mdx
@@ -75,7 +75,8 @@ suited by using a dialogue or alternative method.
 
 This function receives the index of the last image the user viewed before
 closing the LightBox component with the key lastPosition. This might we useful
-if we need to build some analytics on top of this component.
+if we want to return information about the final state when closed (e.g. for
+analytics).
 
 <Playground>
   {() => {
