fix image path on product vocabulary

--- a/docs/guides/product-vocabulary.mdx
+++ b/docs/guides/product-vocabulary.mdx
@@ -145,12 +145,12 @@ Use **create new** when a user is generating something from scratch within
 Jobber. Abbreviating to **New [object]** for page or view titles.
 
 Use **add** when a user is adding something to an object in Jobber, even if that
-object is being newly created.<img
-src="/public/assets/images/in-product-words/addvscreate.png" style={{
-maxWidth:
-"100%"
-}} />
+object is being newly created.
 
+<img
+  src="/public/assets/images/product-vocabulary/addvscreate.png"
+  style={{ maxWidth: "100%" }}
+/>
 <br />
 
 ### back / continue / next / previous
