Add company icon to docs

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -149,6 +149,7 @@ import { Icon } from "@jobber/components/Icon";
 | :----------------------------- | :--------------- |
 | <Icon name="clients" />        | `clients`        |
 | <Icon name="person" />         | `person`         |
+| <Icon name="company" />        | `company`        |
 | <Icon name="user" />           | `user`           |
 | <Icon name="userSwitch" />     | `userSwitch`     |
 | <Icon name="userUnassigned" /> | `userUnassigned` |
