remove extra bit of description of maxLines prop

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -65,7 +65,7 @@ De-emphasize a piece of text that is less important to the user
 
 Used to truncate large text with `...` based on line wrapping, such that the
 total number of lines does not exceed the preset. This is an optional prop. If
-left undefined all the contents are shown. It is same as using base as the value
+left undefined all the contents are shown.
 
 <Playground>
   <Text maxLines="single">
