use medium over base for consistency

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -85,6 +85,16 @@ left undefined all the contents are shown.
   </Text>
   <br />
   <br />
+  <Text maxLines="medium">
+    This will show 4 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
+  </Text>
+  <br />
+  <br />
   <Text maxLines="large">
     This will show 8 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
     elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
