update routes for package mdx

--- a/packages/docx/README.mdx
+++ b/packages/docx/README.mdx
@@ -1,6 +1,6 @@
 ---
 name: Docs Helpers
-route: /docx
+route: /packages/docx
 ---
 
 import { Playground, Props } from "docz";
@@ -15,7 +15,6 @@ Helper components for the Atlantis internal docs viewer.
 <Playground>
   <ComponentStatus stage="rc" responsive="no" accessible="yes" />
 </Playground>
-
 <Props of={ComponentStatus} />
 
 ## `ColorSwatches`
@@ -32,5 +31,4 @@ Helper components for the Atlantis internal docs viewer.
     }}
   />
 </Playground>
-
 <Props of={ColorSwatches} />
