Adds ensure changelog headers back in

--- a/packages/docx/README.mdx
+++ b/packages/docx/README.mdx
@@ -15,6 +15,9 @@ Helper components for the Atlantis internal docs viewer.
 <Playground>
   <ComponentStatus stage="rc" responsive="no" accessible="yes" />
 </Playground>
+
+### Props
+
 <Props of={ComponentStatus} />
 
 ## `ColorSwatches`
@@ -31,4 +34,7 @@ Helper components for the Atlantis internal docs viewer.
     }}
   />
 </Playground>
+
+### Props
+
 <Props of={ColorSwatches} />
