add subheader to page component

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -89,3 +89,17 @@ of footer, it should exist after Page.
     </Content>
   </Page>
 </Playground>
+
+---
+
+## Page with Subheader
+
+<Playground>
+  <Page
+    title="Wisetack"
+    subheader="Consumer financing"
+    intro="Make it easy for your customers to afford the work they want. We’ve partnered with Wisetack to offer consumer-friendly financing on the quotes you send through Jobber. You improve your win rate, and your customers get to afford their dream job."
+  >
+    <Text>Page content here</Text>
+  </Page>
+</Playground>
