update playground copy

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -96,9 +96,9 @@ of footer, it should exist after Page.
 
 <Playground>
   <Page
-    title="Wisetack"
-    subheader="Consumer financing"
-    intro="Make it easy for your customers to afford the work they want. We’ve partnered with Wisetack to offer consumer-friendly financing on the quotes you send through Jobber. You improve your win rate, and your customers get to afford their dream job."
+    title="Notifications"
+    subheader="Notify me of all the work"
+    intro="Improve job completion rates, stop chasing payments, and boost your customer service by automatically communicating with your clients at key points before, during, and after a job. Read more about Notifications by visiting our [Help Center](https://help.getjobber.com/hc/en-us/articles/115009737128)."
   >
     <Text>Page content here</Text>
   </Page>
