rename to use subtitle

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -92,12 +92,12 @@ of footer, it should exist after Page.
 
 ---
 
-## Page with Subheader
+## Page with Subtitle
 
 <Playground>
   <Page
     title="Notifications"
-    subheader="Notify me of all the work"
+    subtitle="Notify me of all the work"
     intro="Improve job completion rates, stop chasing payments, and boost your customer service by automatically communicating with your clients at key points before, during, and after a job. Read more about Notifications by visiting our [Help Center](https://help.getjobber.com/hc/en-us/articles/115009737128)."
   >
     <Text>Page content here</Text>
