update Page description

--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -15,8 +15,8 @@ import { Text } from "../Text";
 <ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
 Use Page to build the outermost "main content" container of a view. Page comes
-complete with the ability to add the page title, along with actions and a
-description as needed.
+complete with the ability to add the page title, along with actions, subtitle,
+and a description as needed.
 
 ```ts
 import { Page } from "@jobber/components/Page";
