--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -94,6 +94,8 @@ of footer, it should exist after Page.
 
 ## Page with Subtitle
 
+Use a subtitle when you need to supplement a page title.
+
 <Playground>
   <Page
     title="Notifications"
