--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -5,6 +5,7 @@ menu: Components
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { Text } from ".";
+import { Content } from "../Content/";
 
 # Text
 
@@ -68,57 +69,64 @@ total number of lines does not exceed the preset. This is an optional prop. If
 left undefined all the contents are shown.
 
 <Playground>
-  <Text maxLines="single">
-    This will show 1 line. Lorem ipsum dolor sit amet, consectetur adipiscing
-    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
-    purus sit amet, finibus ante. Donec pretium condimentum scelerisque.
-  </Text>
-  <br />
-  <br />
-  <Text maxLines="small">
-    This will show 2 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
-    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
-    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
-    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
-    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
-    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
-  </Text>
-  <br />
-  <br />
-  <Text maxLines="medium">
-    This will show 4 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
-    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
-    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
-    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
-    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
-    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
-  </Text>
-  <br />
-  <br />
-  <Text maxLines="large">
-    This will show 8 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
-    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
-    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
-    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
-    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
-    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
-    eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
-    blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
-    consequat nec nec libero.
-  </Text>
-  <br />
-  <br />
-  <Text maxLines="larger">
-    This will show 16 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
-    elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
-    purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
-    ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
-    quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
-    fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
-    eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
-    blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
-    consequat nec nec libero.
-  </Text>
+  <Content>
+    <Text maxLines="single">
+      This will show 1 line. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque.
+    </Text>
+
+    <Text maxLines="small">
+      This will show 2 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
+    </Text>
+
+    <Text maxLines="medium">
+      This will show 4 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
+    </Text>
+
+    <Text maxLines="large">
+      This will show 8 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+      eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+      blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+      consequat nec nec libero.
+    </Text>
+
+    <Text maxLines="larger">
+      This will show 16 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+      eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+      blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+      consequat nec nec libero. Lorem ipsum dolor sit amet, consectetur adipiscing
+      elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
+      purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
+      ligula nec metus suscipit feugiat.Etiam sapien sapien, mattis eu tincidunt
+      quis, pretium sed metus. Maecenas quis dolor lacinia libero rhoncus
+      fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla. Etiam
+      eu lacus nibh. Donec tristique lacus magna, vulputate tristique lacus
+      blandit vitae. Aenean vitae commodo metus. Fusce eu risus quis orci pharetra
+      consequat nec nec libero.
+    </Text>
+
+  </Content>
 </Playground>
 
 ## Sizes
