--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -85,7 +85,7 @@ left undefined all the contents are shown.
       fringilla. Cras mi ante, euismod nec tortor in, tempus mollis nulla.
     </Text>
 
-    <Text maxLines="medium">
+    <Text maxLines="base">
       This will show 4 lines. Lorem ipsum dolor sit amet, consectetur adipiscing
       elit. Vestibulum nec pulvinar nunc. Suspendisse nec eros pretium, rutrum
       purus sit amet, finibus ante. Donec pretium condimentum scelerisque. Duis eu
